--- a/Analyse etats financiers.ipynb
+++ b/Analyse etats financiers.ipynb
@@ -3087,17 +3087,395 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9/30/2019</th>\n",
+       "      <th>9/30/2018</th>\n",
+       "      <th>9/30/2017</th>\n",
+       "      <th>9/30/2016</th>\n",
+       "      <th>9/30/2015</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ratio Fond de Roulement</th>\n",
+       "      <td>1.112218</td>\n",
+       "      <td>1.172570</td>\n",
+       "      <td>1.054748</td>\n",
+       "      <td>1.117564</td>\n",
+       "      <td>1.102557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Endettement Total</th>\n",
+       "      <td>0.462231</td>\n",
+       "      <td>0.483364</td>\n",
+       "      <td>0.518882</td>\n",
+       "      <td>0.521842</td>\n",
+       "      <td>0.509309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dettes-Fonds Propres</th>\n",
+       "      <td>0.857284</td>\n",
+       "      <td>0.933260</td>\n",
+       "      <td>1.074096</td>\n",
+       "      <td>1.086660</td>\n",
+       "      <td>1.032723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Endettement Long Terme</th>\n",
+       "      <td>0.981884</td>\n",
+       "      <td>0.984699</td>\n",
+       "      <td>0.984433</td>\n",
+       "      <td>0.985682</td>\n",
+       "      <td>0.984382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rotation des stocks</th>\n",
+       "      <td>11.934991</td>\n",
+       "      <td>10.514512</td>\n",
+       "      <td>12.350689</td>\n",
+       "      <td>12.412205</td>\n",
+       "      <td>11.906697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rotation de l'actif</th>\n",
+       "      <td>1.514146</td>\n",
+       "      <td>1.316896</td>\n",
+       "      <td>2.177484</td>\n",
+       "      <td>2.281069</td>\n",
+       "      <td>2.269087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Marge Bénéficiare</th>\n",
+       "      <td>0.198521</td>\n",
+       "      <td>0.196539</td>\n",
+       "      <td>0.197013</td>\n",
+       "      <td>0.196811</td>\n",
+       "      <td>0.197181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rendement de l'actif</th>\n",
+       "      <td>0.300590</td>\n",
+       "      <td>0.258821</td>\n",
+       "      <td>0.428992</td>\n",
+       "      <td>0.448940</td>\n",
+       "      <td>0.447421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rendement des fonds propres</th>\n",
+       "      <td>0.558957</td>\n",
+       "      <td>0.500975</td>\n",
+       "      <td>0.891656</td>\n",
+       "      <td>0.938894</td>\n",
+       "      <td>0.911818</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             9/30/2019  9/30/2018  9/30/2017  9/30/2016  \\\n",
+       "Ratio Fond de Roulement       1.112218   1.172570   1.054748   1.117564   \n",
+       "Endettement Total             0.462231   0.483364   0.518882   0.521842   \n",
+       "Dettes-Fonds Propres          0.857284   0.933260   1.074096   1.086660   \n",
+       "Endettement Long Terme        0.981884   0.984699   0.984433   0.985682   \n",
+       "Rotation des stocks          11.934991  10.514512  12.350689  12.412205   \n",
+       "Rotation de l'actif           1.514146   1.316896   2.177484   2.281069   \n",
+       "Marge Bénéficiare             0.198521   0.196539   0.197013   0.196811   \n",
+       "Rendement de l'actif          0.300590   0.258821   0.428992   0.448940   \n",
+       "Rendement des fonds propres   0.558957   0.500975   0.891656   0.938894   \n",
+       "\n",
+       "                             9/30/2015  \n",
+       "Ratio Fond de Roulement       1.102557  \n",
+       "Endettement Total             0.509309  \n",
+       "Dettes-Fonds Propres          1.032723  \n",
+       "Endettement Long Terme        0.984382  \n",
+       "Rotation des stocks          11.906697  \n",
+       "Rotation de l'actif           2.269087  \n",
+       "Marge Bénéficiare             0.197181  \n",
+       "Rendement de l'actif          0.447421  \n",
+       "Rendement des fonds propres   0.911818  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BSMRU_analysis.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Breakdown</td>\n",
+       "      <td>4/30/2020</td>\n",
+       "      <td>4/30/2019</td>\n",
+       "      <td>4/30/2018</td>\n",
+       "      <td>4/30/2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Total Assets</td>\n",
+       "      <td>14,632,900</td>\n",
+       "      <td>9,602,400</td>\n",
+       "      <td>8,662,000</td>\n",
+       "      <td>8,695,500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Total Liabilities Net Minority Interest</td>\n",
+       "      <td>10,619,000</td>\n",
+       "      <td>5,519,400</td>\n",
+       "      <td>4,892,200</td>\n",
+       "      <td>4,992,800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Total Equity Gross Minority Interest</td>\n",
+       "      <td>4,013,900</td>\n",
+       "      <td>4,083,000</td>\n",
+       "      <td>3,769,800</td>\n",
+       "      <td>3,702,700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Total Capitalization</td>\n",
+       "      <td>5,029,800</td>\n",
+       "      <td>5,987,700</td>\n",
+       "      <td>4,842,300</td>\n",
+       "      <td>5,381,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Common Stock Equity</td>\n",
+       "      <td>3,924,600</td>\n",
+       "      <td>4,003,300</td>\n",
+       "      <td>3,702,800</td>\n",
+       "      <td>3,644,200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Capital Lease Obligations</td>\n",
+       "      <td>5,266,200</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Net Tangible Assets</td>\n",
+       "      <td>1,382,100</td>\n",
+       "      <td>1,369,800</td>\n",
+       "      <td>1,858,900</td>\n",
+       "      <td>1,760,300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Working Capital</td>\n",
+       "      <td>-804,500</td>\n",
+       "      <td>-41,800</td>\n",
+       "      <td>-466,300</td>\n",
+       "      <td>-324,200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Invested Capital</td>\n",
+       "      <td>5,599,800</td>\n",
+       "      <td>6,024,200</td>\n",
+       "      <td>5,369,700</td>\n",
+       "      <td>5,515,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Tangible Book Value</td>\n",
+       "      <td>1,382,100</td>\n",
+       "      <td>1,369,800</td>\n",
+       "      <td>1,858,900</td>\n",
+       "      <td>1,760,300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Total Debt</td>\n",
+       "      <td>6,941,400</td>\n",
+       "      <td>2,020,900</td>\n",
+       "      <td>1,666,900</td>\n",
+       "      <td>1,870,800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Net Debt</td>\n",
+       "      <td>666,800</td>\n",
+       "      <td>1,467,600</td>\n",
+       "      <td>1,039,000</td>\n",
+       "      <td>1,663,500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Share Issued</td>\n",
+       "      <td>269,109</td>\n",
+       "      <td>271,800</td>\n",
+       "      <td>271,687</td>\n",
+       "      <td>271,676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Ordinary Shares Number</td>\n",
+       "      <td>269,109</td>\n",
+       "      <td>271,800</td>\n",
+       "      <td>271,687</td>\n",
+       "      <td>271,676</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          0           1          2          3  \\\n",
+       "0                                 Breakdown   4/30/2020  4/30/2019  4/30/2018   \n",
+       "1                              Total Assets  14,632,900  9,602,400  8,662,000   \n",
+       "2   Total Liabilities Net Minority Interest  10,619,000  5,519,400  4,892,200   \n",
+       "3      Total Equity Gross Minority Interest   4,013,900  4,083,000  3,769,800   \n",
+       "4                      Total Capitalization   5,029,800  5,987,700  4,842,300   \n",
+       "5                       Common Stock Equity   3,924,600  4,003,300  3,702,800   \n",
+       "6                 Capital Lease Obligations   5,266,200        NaN        NaN   \n",
+       "7                       Net Tangible Assets   1,382,100  1,369,800  1,858,900   \n",
+       "8                           Working Capital    -804,500    -41,800   -466,300   \n",
+       "9                          Invested Capital   5,599,800  6,024,200  5,369,700   \n",
+       "10                      Tangible Book Value   1,382,100  1,369,800  1,858,900   \n",
+       "11                               Total Debt   6,941,400  2,020,900  1,666,900   \n",
+       "12                                 Net Debt     666,800  1,467,600  1,039,000   \n",
+       "13                             Share Issued     269,109    271,800    271,687   \n",
+       "14                   Ordinary Shares Number     269,109    271,800    271,687   \n",
+       "\n",
+       "            4  \n",
+       "0   4/30/2017  \n",
+       "1   8,695,500  \n",
+       "2   4,992,800  \n",
+       "3   3,702,700  \n",
+       "4   5,381,000  \n",
+       "5   3,644,200  \n",
+       "6         NaN  \n",
+       "7   1,760,300  \n",
+       "8    -324,200  \n",
+       "9   5,515,000  \n",
+       "10  1,760,300  \n",
+       "11  1,870,800  \n",
+       "12  1,663,500  \n",
+       "13    271,676  \n",
+       "14    271,676  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# input a stock symbol\n",
+    "symbol = 'EMP-A.TO'\n",
+    "# Yahoo Finance links\n",
+    "url_bs = 'https://finance.yahoo.com/quote/' + symbol + '/balance-sheet?p=' + symbol\n",
+    "url_is = 'https://finance.yahoo.com/quote/' + symbol + '/financials?p=' + symbol\n",
+    "url_cf = 'https://finance.yahoo.com/quote/' + symbol + '/cash-flow?p='+ symbol\n",
+    "# get Balance Sheet \n",
+    "BS_orginal, BS_transpose = get_table(url_bs)\n",
+    "\n",
+    "# get Income Statement \n",
+    "IS_orginal, IS_transpose = get_table(url_is)\n",
+    "\n",
+    "# get Cash Flow\n",
+    "CF_orginal, CF_transpose = get_table(url_cf)\n",
+    "\n",
+    "BS_analysis = pd.DataFrame(BS_transpose['Date']) # copy columns of dataframe\n",
+    "BS_analysis\n",
+    "BS_orginal"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get Balance Sheet \n",
+    "urlBSMRU = 'https://raw.githubusercontent.com/hadrienpierre/IND8122-CS1/main/Annual_BalanceSheet_MRU.csv'\n",
+    "BSMRU_orginal= pd.read_csv (urlBSMRU, index_col=0, decimal='.')\n",
+    "BSMRU_transpose = BSMRU_orginal.transpose() \n",
+    "\n",
+    "# get Income Statement \n",
+    "urlISMRU = 'https://raw.githubusercontent.com/hadrienpierre/IND8122-CS1/main/Annual_IncomeStatement_MRU.csv'\n",
+    "ISMRU_orginal = pd.read_csv (urlISMRU, index_col=0, decimal='.')\n",
+    "ISMRU_transpose = ISMRU_orginal.transpose()\n",
+    "\n",
+    "# get Cash Flow\n",
+    "CFMRU_orginal, CFMRU_transpose = get_table(urlMRU_cf)\n",
+    "\n",
+    "#\n",
+    "current_assets = BSMRU_transpose[\"Actifs courants\"].str.replace(',', '').astype(float)\n",
+    "current_liabilities = BSMRU_transpose[\"Passifs courants\"].str.replace(',', '').astype(float)\n",
+    "rfdr = current_assets / current_liabilities\n",
+    "BSMRU_analysis = pd.DataFrame(rfdr)\n",
+    "BSMRU_analysis.columns = ['Ratio Fond de Roulement']\n",
+    "BSMRU_analysis"
+   ]
   }
  ],
  "metadata": {
